수정: S3 고아 파일 삭제, 마이페이지 쿼리 상한선, IllegalStateException 핸들러
- ArtistGalleryPhotoService.delete(): DB 삭제 후 S3 오브젝트 삭제 추가
  (기존에는 DB에서만 제거되어 S3에 파일 영구 잔류)
- getMyPosts/getMyComments: 무제한 List 반환 → 최신 200건 상한선 적용
  PostRepository/CommentRepository에 @EntityGraph + Pageable 버전 추가
- GlobalExceptionHandler: IllegalStateException 전용 핸들러 추가 (ERROR 로깅)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>